<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nawasco</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="et_username">UserName</string>
    <string name="et_password">PassWord</string>
    <string name="btn_login">Login</string>
    <string name="cb_rem">Keep Me Logged In</string>
    <string name="settings">Settings</string>
    <string name="exit">Cancel</string>
    <string name="title_activity_menu">Menu</string>
    <string name="list_none">No Readings</string>
    <string name="title_activity_read_meter">ReadMeter</string>
    <string name="lbl_meter">Meter Reading</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="str_logo">Nawasco</string>
    <string name="menu_map">View Route</string>
    <string name="menu_read">Read Meter</string>
    <string name="menu_exit">smath</string>
    <string name="title_activity_view_route">ViewRoute</string>

</resources>