<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
    android:layout_height="70dp"
    android:orientation="vertical"
    android:padding="3dp" 
      >
 
 <RelativeLayout
      android:layout_width="match_parent"
        android:layout_height="match_parent"
          android:background="@drawable/listrow_bg"
      >
    <!-- Title Of Song-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="15sp"
        android:textStyle="bold"/>
 
    <TextView
        android:id="@+id/artist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:textColor="#343434"
        android:textSize="12sp"
        android:layout_marginTop="1dip"
         android:text="@string/action_settings" />
 
   <TextView android:id="@+id/tv_lat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
       />
    <TextView android:id="@+id/tv_lng"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
       />
 
     <!-- Rightend Arrow -->
     <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_af_normal"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/app_name"
        android:layout_centerVertical="true"/>
 </RelativeLayout>
</LinearLayout>