<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical|horizontal" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="30dp"
        android:gravity="center"
        tools:context=".ReadMeter" >

        <TextView
            android:id="@+id/lbl_read"
            style="@style/labels"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lbl_meter" />

        <EditText
            android:id="@+id/et_read"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_read"
            android:ems="10"
            android:padding="10dp"
            android:text="Meter Read" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_read"
             android:layout_marginTop="100dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/btn_submit" >
            </Button>

            <Button
                android:id="@+id/Button02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/Button01"
                android:layout_weight="1"
                android:text="@string/btn_cancel"  >
            </Button>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>